@@ -46,16 +46,14 @@ class KezMenu(object):
         self.x = 0
         self.y = 0
         self.option = 0
-        self.width = 1
+        self.width = 0
+        self.height = 0
         self.color = (0, 0, 0, 0)
-        self.hcolor = (255, 0, 0, 0)
+        self.focus_color = (255, 0, 0, 255)
         self.mouse_focus = False
         self._effects = {}
-        try:
-            self._font = pygame.font.Font(None, 32)
-            self._fixSize()
-        except:
-            self._font = None
+        self._font = pygame.font.Font(None, 32)
+        self._fixSize()
 
     def enableEffect(self, name, value):
         """Enable an effect in the KezMEnu
@@ -76,10 +74,10 @@ class KezMenu(object):
 
     def _fixSize(self):
         """Fix the menu size. Commonly called when the font is changed"""
-        self.height = len(self.options)*self.font.get_height()
+        self.height = len(self.options)*self._font.get_height()
         for o in self.options:
             text = o[0]
-            ren = self.font.render(text, 1, (0, 0, 0))
+            ren = self._font.render(text, 1, (0, 0, 0))
             if ren.get_width() > self.width:
                 self.width = ren.get_width()
 
@@ -88,7 +86,7 @@ class KezMenu(object):
         i=0
         for o in self.options:
             if i==self.option:
-                clr = self.hcolor
+                clr = self.focus_color
             else:
                 clr = self.color
             text = o[0]
@@ -124,11 +122,13 @@ class KezMenu(object):
     def _checkMousePositionForFocus(self):
         """Check the mouse position to know if move focus on a option"""
         i = 0
+        mouse_pos = pygame.mouse.get_pos()
+        ml,mt = self.position
         for o in self.options:
             text = o[0]
             w,h = self.font.size(text)
-            rect = pygame.Rect( (self.x, self.y + i*h), (w,h) )
-            if rect.collidepoint(pygame.mouse.get_pos()):
+            rect = pygame.Rect( (self.x+ml, self.y + mt + i*h), (w,h) )
+            if rect.collidepoint(mouse_pos):
                 self.option = i
                 self.mouse_focus = True
                 break           
@@ -137,7 +137,7 @@ class KezMenu(object):
             self.mouse_focus = False
 
 
-    @deprecated(("The %s function is depreacted and will be removed in future versions. "
+    @deprecated(("The %s function is deprecated and will be removed in future versions. "
                  "Please use the position property instead to specify (x,y)"))
     def set_pos(self, x, y):
         """Set the topleft of the menu at x,y"""
@@ -149,7 +149,7 @@ class KezMenu(object):
         self.y = y
     position = property(lambda self: (self.x,self.y), _setPosition, doc="""The menu position inside the container""")
 
-    @deprecated(("The %s function is depreacted and will be removed in future versions. "
+    @deprecated(("The %s function is deprecated and will be removed in future versions. "
                  "Please use the font property instead."))
     def set_font(self, font):
         """Set the font used for the menu."""
@@ -160,15 +160,19 @@ class KezMenu(object):
         self._fixSize()
     font = property(lambda self: self._font, _setFont, doc="""Font used by the menu""")
 
+    @deprecated(("The %s function is deprecated and will be removed in future versions. "
+                 "Please use the focus_color attribute directly instead."))
     def set_highlight_color(self, color):
         """Set the highlight color"""
-        self.hcolor = color
-        
+        self.focus_color = color
+
+    @deprecated(("The %s function is deprecated and will be removed in future versions. "
+                 "Please use the color attribute directly instead."))
     def set_normal_color(self, color):
         """Set the normal color"""
         self.color = color
-        
+
     def center_at(self, x, y):
-        """Center the center of the menu at x,y"""
+        """Center the menu at x,y"""
         self.x = x-(self.width/2)
         self.y = y-(self.height/2)
