@@ -6,7 +6,15 @@ Changelog
 
  * Added a README.txt in doctest format.
  
- * Now you can enable an "enalge-on-hover" property for the menu.
+ * Added many deprecation warning for not `PEP 8`__ named methods.
+   Those methods will be removed in future.
+ 
+ * If the menu position was moved from (0,0), the mouse control was buggy
+   because not counting this offset.
+ 
+ * Support for the menu effects
+
+__ http://www.python.org/dev/peps/pep-0008/
 
 0.2.1
 -----
